change something for debug

--- a/sensor_drivers/velodyne_assembler/package.xml
+++ b/sensor_drivers/velodyne_assembler/package.xml
@@ -18,5 +18,7 @@
   <build_depend>cmake_modules</build_depend>
   <build_depend>libpointmatcher</build_depend>
   <build_depend>libpointmatcher_ros</build_depend>
+  <build_depend>eigen_catkin</build_depend>
+  <build_depend>pointmatcher_ros</build_depend>
 
 </package>
